--- a/trettin_benjamin.assignment-1.08/CHANGELOG
+++ b/trettin_benjamin.assignment-1.08/CHANGELOG
@@ -1,3 +1,45 @@
+    commit 73
+    Author: Benjamin Trettin
+    Date:   Wed Nov 7 18:35:12 2016 -0500
+
+      Finished compilation and ran properly
+
+    commit 72
+    Author: Benjamin Trettin
+    Date:   Wed Nov 7 11:56:02 2016 -0500
+
+      Fixed a couple bugs with monster factory and color creation
+
+    commit 71
+    Author: Benjamin Trettin
+    Date:   Tue Nov 6 16:23:03 2016 -0500
+
+      Fixed issue with loading game with monsters creation
+
+    commit 70
+    Author: Benjamin Trettin
+    Date:   Tue Nov 6 13:37:05 2016 -0500
+
+      Modified code to take monsters from monster factory
+
+    commit 69
+    Author: Benjamin Trettin
+    Date:   Mon Nov 5 12:14:06 2016 -0500
+
+      added code for dice.c and dice.h
+
+    commit 68
+    Author: Benjamin Trettin
+    Date:   Sat Nov 3 01:57:53 2016 -0500
+
+      added code for monster factory
+
+    commit 67
+    Author: Benjamin Trettin
+    Date:   Fri Nov 2 18:30:46 2016 -0500
+
+      Added code to parse object file
+
     commit 66
     Author: Benjamin Trettin
     Date:   Wed Oct 31 20:05:12 2016 -0500
